@@ -50,7 +50,7 @@ Yannig Parre - i18n fr_FR
 Laurent Freval - Patches and feedback
 Beau Gunderson - Patches and feedback
 Thomas Sesselmann - Patches and feedback
-
+Vladimir Bilik - Feedback
 
 ###########################################
 #           NPCD Thanks                   #
